--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           config: .github/buildkit.toml
+          buildkitd-flags: --allow-insecure-entitlement=security.insecure
       -
         name: Test buildkit
         if: matrix.target == 'buildkit'
@@ -110,6 +111,11 @@ jobs:
           docker run --rm --platform=linux/s390x s390x/ubuntu apt update
           docker run --rm --platform=linux/ppc64le ppc64le/ubuntu apt update
           docker run --rm --platform=linux/arm64 arm64v8/ubuntu apt update
+      - name: Test Syscalls
+        if: matrix.target == 'mainline'
+        run: |
+          set -x
+          docker buildx build --platform=linux/amd64,linux/arm64,linux/386,linux/arm,linux/ppc64le,linux/s390x --target=run --allow security.insecure --build-arg CONFIG_RT_GROUP_SCHED=false ./test
       -
         name: Login to DockerHub
         if: startsWith(github.ref, 'refs/heads/')
