--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,40 @@ on:
 
 env:
   REPO_SLUG: tonistiigi/binfmt
+  CACHE_GHA_SCOPE: binfmt
+  CACHE_GHA_SCOPE_CROSS: binfmt-cross
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - mainline
+          - buildkit
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Expose GitHub Runtime
+        uses: crazy-max/ghaction-github-runtime@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Warm cache
+        run: |
+          ./hack/warm-cache ${{ matrix.target }}
+        env:
+          CACHE_FROM: type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
+          CACHE_TO: type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
+
   validate:
     runs-on: ubuntu-latest
+    needs:
+      - prepare
     strategy:
       fail-fast: false
       matrix:
@@ -27,15 +57,22 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
       -
+        name: Expose GitHub Runtime
+        uses: crazy-max/ghaction-github-runtime@v2
+      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
         name: Run
         run: |
           ${{ matrix.script }}
+        env:
+          CACHE_FROM: type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-mainline
 
   test:
     runs-on: ubuntu-latest
+    needs:
+      - prepare
     strategy:
       fail-fast: false
       matrix:
@@ -56,8 +93,7 @@ jobs:
         with:
           targets: buildkit-test
           set: |
-            *.cache-from=type=gha,scope=${{ matrix.target }}
-            *.cache-to=type=gha,scope=${{ matrix.target }}
+            *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
       -
         name: Load mainline for testing
         if: matrix.target == 'mainline'
@@ -66,8 +102,7 @@ jobs:
           targets: mainline
           load: true
           set: |
-            *.cache-from=type=gha,scope=${{ matrix.target }}
-            *.cache-to=type=gha,scope=${{ matrix.target }}
+            *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
             mainline.tags=tonistiigi/binfmt:test
       -
         name: Test mainline
@@ -93,7 +128,7 @@ jobs:
   e2e:
     runs-on: ubuntu-latest
     needs:
-      - test
+      - prepare
     strategy:
       fail-fast: false
       matrix:
@@ -116,7 +151,7 @@ jobs:
           targets: mainline
           load: true
           set: |
-            *.cache-from=type=gha,scope=mainline
+            *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-mainline
             mainline.tags=tonistiigi/binfmt:test
       -
         name: Set up QEMU
@@ -186,5 +221,6 @@ jobs:
           targets: ${{ matrix.target }}-all
           push: ${{ startsWith(github.ref, 'refs/heads/') }}
           set: |
-            *.cache-from=type=gha,scope=${{ matrix.target }}
-            *.cache-to=type=gha,scope=${{ matrix.target }}
+            *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE_CROSS }}-${{ matrix.target }}
+            *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
+            *.cache-to=type=gha,scope=${{ env.CACHE_GHA_SCOPE_CROSS }}-${{ matrix.target }}
