--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,13 +114,14 @@ jobs:
         name: Test mainline
         if: matrix.target == 'mainline'
         run: |
-          docker run --rm --privileged tonistiigi/binfmt:test --uninstall amd64,arm64,arm,ppc64le,s390x,riscv64
+          docker run --rm --privileged tonistiigi/binfmt:test --uninstall amd64,arm64,arm,ppc64le,s390x,riscv64,loongarch64
           docker run --rm --privileged tonistiigi/binfmt:test --install all
           docker run --rm arm64v8/alpine uname -a
           docker run --rm arm32v7/alpine uname -a
           docker run --rm ppc64le/alpine uname -a
           docker run --rm s390x/alpine uname -a
           docker run --rm tonistiigi/debian:riscv uname -a
+          docker run --rm yangzewei2023/debian:loongarch64 uname -a
           docker run --rm --platform=linux/s390x s390x/ubuntu apt update
           docker run --rm --platform=linux/ppc64le ppc64le/ubuntu apt update
           docker run --rm --platform=linux/arm64 arm64v8/ubuntu apt update
