--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,13 +109,13 @@ jobs:
           load: true
           set: |
             *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
-            mainline.tags=tonistiigi/binfmt:test
+            mainline.tags=${{ env.REPO_SLUG }}:test
       -
         name: Test mainline
         if: matrix.target == 'mainline'
         run: |
-          docker run --rm --privileged tonistiigi/binfmt:test --uninstall amd64,arm64,arm,ppc64le,s390x,riscv64,loongarch64
-          docker run --rm --privileged tonistiigi/binfmt:test --install all
+          docker run --rm --privileged ${{ env.REPO_SLUG }}:test --uninstall amd64,arm64,arm,ppc64le,s390x,riscv64,loongarch64
+          docker run --rm --privileged ${{ env.REPO_SLUG }}:test --install all
           docker run --rm arm64v8/alpine uname -a
           docker run --rm arm32v7/alpine uname -a
           docker run --rm ppc64le/alpine uname -a
@@ -176,12 +176,12 @@ jobs:
           load: true
           set: |
             *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
-            *.tags=tonistiigi/binfmt:test
+            *.tags=${{ env.REPO_SLUG }}:test
       -
         name: Set up QEMU
         run: |
-          docker run --privileged --rm tonistiigi/binfmt --uninstall qemu-*
-          docker run --rm --privileged tonistiigi/binfmt:test --install all
+          docker run --privileged --rm ${{ env.REPO_SLUG }} --uninstall qemu-*
+          docker run --rm --privileged ${{ env.REPO_SLUG }}:test --install all
       -
         name: Test
         working-directory: test/dockerfiles/${{ matrix.dockerfile }}
