--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
         name: Test mainline
         if: matrix.target == 'mainline'
         run: |
-          docker run --rm --privileged ${{ env.REPO_SLUG }}:test --uninstall amd64,arm64,arm,ppc64le,s390x,riscv64,loongarch64
+          docker run --rm --privileged ${{ env.REPO_SLUG }}:test --uninstall qemu-*
           docker run --rm --privileged ${{ env.REPO_SLUG }}:test --install all
           docker run --rm arm64v8/alpine uname -a
           docker run --rm arm32v7/alpine uname -a
