--- a/test/dockerfiles/ejabberd/Dockerfile
+++ b/test/dockerfiles/ejabberd/Dockerfile
@@ -1,7 +1,4 @@
 FROM alpine:3.15.4 AS build
-ARG REPOSITORY=https://github.com/processone/ejabberd.git
-#ARG VERSION=master
-ARG VERSION=99d9e315a3c0524d84197e63741790d5893c51f4
 
 RUN apk upgrade --update musl \
     && apk add \
@@ -32,9 +29,9 @@ RUN mix local.hex --force \
 
 WORKDIR ejabberd
 
-RUN git clone $REPOSITORY . \
-    && git checkout $VERSION \
-    && mv .github/container/ejabberdctl.template . \
+ADD https://github.com/processone/ejabberd.git#99d9e315a3c0524d84197e63741790d5893c51f4 .
+
+RUN mv .github/container/ejabberdctl.template . \
     && ./autogen.sh \
     && ./configure --with-rebar=mix \
     && make deps \
